force-app/main/default/objects/skedHC__Involved_individual__c/skedHC__Involved_individual__c.object-meta.xml
<CustomObject>
    <label>Involved Individual</label>
    <nameField>
        <displayFormat>IDV-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Involved Individuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>