force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__Accident_Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Accident_Incident_Report__c</fullName>
    <label>Accident &amp; Incident Report</label>
    <referenceTo>skedHC__Accident_Incident__c</referenceTo>
    <relationshipLabel>Involved Individuals</relationshipLabel>
    <relationshipName>Involved_Individuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>