force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__Account__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Involved Individuals</relationshipLabel>
    <relationshipName>Involved_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>