force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__City__c.field-meta.xml
<CustomField>
    <fullName>skedHC__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>