force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__Country__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>