force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Date_of_Incident__c</fullName>
    <formula>skedHC__Accident_Incident_Report__r.skedHC__Date_Time_of_Incident__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>