force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__Designation__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Designation__c</fullName>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>