force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__FirstName__c.field-meta.xml
<CustomField>
    <fullName>skedHC__FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>