force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__LastName__c.field-meta.xml
<CustomField>
    <fullName>skedHC__LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>