force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__PostCode__c.field-meta.xml
<CustomField>
    <fullName>skedHC__PostCode__c</fullName>
    <label>Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>