force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__State_Province__c.field-meta.xml
<CustomField>
    <fullName>skedHC__State_Province__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>