force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__Street__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>