force-app/main/default/objects/skedHC__Involved_individual__c/fields/skedHC__Type_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Type_of_Incident__c</fullName>
    <formula>TEXT(skedHC__Accident_Incident_Report__r.skedHC__Type_of_Incident__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Incident</label>
    <type>Text</type>
</CustomField>